--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,72 @@ body,
 .padding-container {
   @apply px-6 md:px-24;
 }
+
+.icon1 {
+  background-color: #ab72d87a;
+  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+  width: 25px;
+  height: 25px;
+}
+
+.icon2 {
+  background-color: #ab72d87a;
+  clip-path: polygon(
+    20% 0%,
+    0% 20%,
+    30% 50%,
+    0% 80%,
+    20% 100%,
+    50% 70%,
+    80% 100%,
+    100% 80%,
+    70% 50%,
+    100% 20%,
+    80% 0%,
+    50% 30%
+  );
+  width: 30px;
+  height: 30px;
+}
+
+.icon3 {
+  background-color: #ab72d87a;
+  clip-path: polygon(
+    50% 0%,
+    90% 20%,
+    100% 60%,
+    75% 100%,
+    25% 100%,
+    0% 60%,
+    10% 20%
+  );
+  width: 30px;
+  height: 30px;
+}
+
+.icon4 {
+  background-color: #ab72d87a;
+  clip-path: polygon(
+    0% 20%,
+    60% 20%,
+    60% 0%,
+    100% 50%,
+    60% 100%,
+    60% 80%,
+    0% 80%
+  );
+  width: 30px;
+  height: 30px;
+}
+
+.moca-bg {
+  background-image: url("./assets/moca.png");
+  background-size: 20rem 20rem;
+  background-repeat: no-repeat;
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  background-color: #ab72d8;
+  width: 20rem;
+  height: 19rem;
+}
+
+@med;
